tests/NormalTests/paczka1/small_fuzzy/22257378.err
Error in line 1: qMi A552 50,4
Error in line 3: mNDLdZanbK A32 72,0
Error in line 2: qMi A32 13,0
Error in line 4: lTdEh3TEi A552 73,0
